Initial automation framework commit

--- a/src/test/resources/config/qa.properties
+++ b/src/test/resources/config/qa.properties
@@ -3,7 +3,7 @@ browserversion =
 url = https://naveenautomationlabs.com/opencart/index.php?route=account/login
 
 testname = 
-username = feb2024@gmail.com
+username = septbatch2024@open.com
 password = Selenium@12345
 
 headless = false
