--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,6 @@
 		<aspectj.version>1.9.19</aspectj.version>
 		<cucumber.version>7.18.1</cucumber.version>
 		<cucumber-jvm.version>7.18.1</cucumber-jvm.version>
-		<cucumber.version>7.11.1</cucumber.version>
 
 	</properties>
 
@@ -30,6 +29,19 @@
 			<url>http://admin:admin123@localhost:8081/repository/maven-snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
+
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>io.cucumber</groupId>
+				<artifactId>cucumber-bom</artifactId>
+				<version>${cucumber.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 		<dependency>
@@ -94,27 +106,6 @@
 			<version>1.5.9</version>
 		</dependency>
 
-		<dependency>
-			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-core</artifactId>
-			<version>${cucumber.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-java</artifactId>
-			<version>${cucumber.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-plugin</artifactId>
-			<version>${cucumber.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-picocontainer</artifactId>
-			<version>${cucumber.version}</version>
-		</dependency>
 
 
 		<dependency>
@@ -135,12 +126,12 @@
 			</exclusions>
 		</dependency>
 
-		<!-- Allure JUnit 4 integration -->
 		<dependency>
 			<groupId>io.qameta.allure</groupId>
-			<artifactId>allure-junit4</artifactId>
+			<artifactId>allure-testng</artifactId>
 			<version>2.20.1</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
@@ -155,18 +146,12 @@
 			<artifactId>cucumber-testng</artifactId>
 			<version>7.14.0</version>
 		</dependency>
-		<dependency>
-			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-junit</artifactId>
-			<version>${cucumber.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>7.10.2</version>
-			<scope>compile</scope>
-		</dependency>
 
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>5.6.4</version> <!-- or latest -->
+		</dependency>
 
 	</dependencies>
 
