--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,4 +1,4 @@
-browser = chrome
+!-browser = chrome
 url = https://naveenautomationlabs.com/opencart/index.php?route=account/login
 
 username = feb2024@gmail.com
